# Bridging_NL_And_SQL_Analytics

./: README.md  pyproject.toml  querybridge.db  requirements.txt
app/: main.py
app/analytics/: post_processor.py  summarizer.py  visualizer.py
app/config/: prompts.py  settings.py
app/database/: connection.py  executor.py  schema_loader.py
app/llm/: client.py  schema_reasoner.py  text_to_sql.py
app/utils/: exceptions.py  logger.py
app/validation/: data_validator.py  guardrails.py  sql_validator.py
app/workflows/: analytics_flow.py
scripts/: create_table.py  seed_data.py  view_data.py
tests/: test_query_safety.py  test_text_to_sql.py  test_workflow.py
